# sentiment-analysis-mlops

./: .gitignore  README.md  config.json  model_2024-03-13_epoch_2.json  pyproject.toml
sentiment_analysis_mlops/: amazon_reviews_dataset.py  log_color_handler.py  ml_pipe.py
sentiment_analysis_mlops/ml_models/: sentiment_model.py
sentimentanalysismlops/: amazon_reviews_dataset.py  appsettings.py  config.json  main.py  ml_pipe.py
sentimentanalysismlops/mlModels/: sentiment_model.py
sentimentanalysismlops/strongTypes/: ml_mode.py  review_item.py
