[tool.poetry]
name = "SentimentAnalysisMLOPS"
version = "0.1.0"
description = "Sentiment Analysis on the Amazon Review Data (2018). Objective: Classify the sentiment of reviews as positive, negative, or neutral."
authors = ["Bohdan <bohdan.kovalevych@nure.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
