[tool.poetry]
name = "SentimentAnalysisMLOPS"
version = "1.0.0"
description = "Sentiment Analysis on the Amazon Review Data (2018). Objective: Classify the sentiment of reviews as positive, negative, or neutral."
authors = ["Bohdan <bohdan.kovalevych@nure.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.0"
torch = "^2.0.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
tensorboard = "^2.16.2"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
pyyaml = "^6.0.1"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
